feat: adding endpoint categories
