# internal/dto/category_dto .go
@@ -1,0 +1,15 @@
+package dto
+
+import "kasir-api/internal/domain"
+
+type CategoryRequest struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
+
+func CategoryReqToDomain(req *CategoryRequest) *domain.Category {
+	return &domain.Category{
+		Name:        req.Name,
+		Description: req.Description,
+	}
+}
